# topsongs

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
appdata/: .env.example  docker-compose.yml  run-topsongs
scripts/: container-entrypoint.sh
tests/: test_cli.py  test_config.py  test_jellyfin_unittest.py  test_lastfm_unittest.py  test_matcher.py  test_normalize.py  test_planner_unittest.py  test_reporter.py  test_sanitize.py
topsongs/: cli.py  config.py  filters.py  jellyfin.py  logging_setup.py  matcher.py  models.py  normalize.py  planner.py  reporter.py  sanitize.py
topsongs/providers/: __init__.py  base.py  lastfm.py
