[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topsongs"
version = "0.1.0"
description = "Planner for Last.fm top tracks mapped to Jellyfin music libraries"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "np6126" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "httpx>=0.27,<0.29",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.6",
]

[project.scripts]
topsongs = "topsongs.cli:main"
run-topsongs = "topsongs.cli:main"

[tool.setuptools]
packages = ["topsongs", "topsongs.providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
